feat: add Tailwind CSS to Blazor project

--- a/ProcGenFun.Blazor/wwwroot/index.html
+++ b/ProcGenFun.Blazor/wwwroot/index.html
@@ -6,6 +6,7 @@
     <title>ProcGenFun.Blazor</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/tailwind.css" rel="stylesheet" />
     
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="ProcGenFun.Blazor.styles.css" rel="stylesheet" /> -->
