--- a/ProcGenFun.Blazor/wwwroot/index.html
+++ b/ProcGenFun.Blazor/wwwroot/index.html
@@ -7,6 +7,10 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/tailwind.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,400;0,700;1,400;1,700&family=Trirong:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="ProcGenFun.Blazor.styles.css" rel="stylesheet" /> -->
