feat: add basic structure of Blazor app

--- a/ProcGenFun.Blazor/wwwroot/index.html
+++ b/ProcGenFun.Blazor/wwwroot/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProcGenFun.Blazor</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
@@ -11,12 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:ital,wght@0,400;0,700;1,400;1,700&family=Trirong:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="ProcGenFun.Blazor.styles.css" rel="stylesheet" /> -->
 </head>
 
-<body>
+<body class="bg-gray-50">
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
